# GoodbyeDPI-Turkey-interfaced

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
resources/goodbyedpi/: README.md  manifest.json
scripts/: sync-upstream.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LogConsole.tsx  PresetCard.tsx  SettingsPanel.tsx  StatusPill.tsx
src/lib/: tauri.ts
src/styles/: app.css
