[package]
name = "goodbyedpi-interface"
version = "0.1.0"
description = "GoodbyeDPI Turkey desktop control panel"
authors = ["Codex"]
license = "MIT"
repository = "https://github.com/ValdikSS/GoodbyeDPI"
homepage = "https://github.com/ValdikSS/GoodbyeDPI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "goodbyedpi_interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon"] }
